# wyrm

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cyclonedds.xml  install.sh  install_deps.sh  install_win.sh  install_wsl.sh
cmake/: FindNatNet.cmake
config/: config.toml
include/: types.hpp
src/: main.cpp  serialization.cpp  types.cpp
tests/: CMakeLists.txt
wyrm-cpp/: CMakeLists.txt
wyrm-cpp/cmake/: wyrm-cpp-config.cmake.in
wyrm-cpp/idl/: Description.idl  Frame.idl  RigidBody.idl
wyrm-cpp/idl/geometry_msgs/msg/: Point.idl  Quaternion.idl
wyrm-cpp/include/wyrm/: aliases.hpp  keys.hpp  serialization.hpp  topics.hpp  types.hpp
wyrm-cpp/tests/: CMakeLists.txt  test_serialization.cpp
wyrm_msgs/: Description.msg
wyrm_msgs/msg/: Frame.msg  RigidBody.msg
wyrmd/: CMakeLists.txt
wyrmd/config/: config.toml
wyrmd/include/: context.hpp  io.hpp  net.hpp
wyrmd/src/: context.cpp  io.cpp  main.cpp  net.cpp
wyrmpy/: pyproject.toml
wyrmpy/src/wyrmpy/: __init__.py  _crd_types.py  _parser.py  keys.py  serialization.py  types.py
