[project]
name = "wyrmpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nicholas Sutton", email = "nicksutton46@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "eclipse-zenoh>=1.9.0",
    "pycdr2>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"
