[project]
name = "wyrmpy"
version = "1.1.0"
description = "wyrmpy is a communication library for connecting to the wyrmd NatNet client using Zenoh."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Nicholas Sutton", email = "nicksutton46@gmail.com" }
]
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/nick-Sutton/wyrm"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"